Details
- 
    Bug 
- 
    Resolution: Fixed
- 
    Trivial 
- 
    None
Description
 0.4.15-dev-730-gabbe656 is affected
 0.4.15-dev-730-gabbe656 is affected
 0.4.14-RC-36-gb30846a is affected as well.
 0.4.14-RC-36-gb30846a is affected as well.
When I press'n'hold a button with the left mouse button and then move the cursor out of the button rect (while still keeping the button pressed)
Expected result
 The button should be repainted in unpressed state as soon as I leave the button rect.
 The button should be repainted in unpressed state as soon as I leave the button rect.
When I return with the mouse cursor over the button rect, then the button should be painted as pressed again. This is the behavior on XPSP3 (and most likely all other versions of Windows).
Observed result
 On ros the button erroneously stays in pressed state when I leave the button-rect
 On ros the button erroneously stays in pressed state when I leave the button-rect
Ros does not log anything while doing this.
 0.4.14-RC-36-gb30846a.webm
 0.4.14-RC-36-gb30846a.webm
 0.4.14-RC-36-gb30846a_useless.log
 0.4.14-RC-36-gb30846a_useless.log
I suspect that to be broken in comctl32/button.c, correct me if I am wrong.
Attachments
Issue Links
- blocks
- 
                    CORE-14434 Syncing ReactOS with Wine Staging 3.3 -         
- Resolved
 
-