[0.4.13][COMCTL32] Button.c Fix CORE-17260

Press'n'Hold of a button, then leaving the button rect
should redraw the button in unpressed state

Thanks to JIRA user 'I_kill_Bugs' for perfecting
my initial experiments to fix that.

It regressed by 0.4.9-dev-719-g b3fb8555bf9abcc04eeac31c7153d33e2f027fc0

No need to sync anything with Wine, their code is
correct on Wine head. The bug was in ros specific diff.

cherry picked from commit 0.4.15-dev-1085-g c947eb4d176603e0ff29217c079d8f5e1c2119e1